--- a/src/style/todo.scss
+++ b/src/style/todo.scss
@@ -2,8 +2,32 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-size: 1.5rem;
 
-  .todo-create-data {
-    color: silver;
+  .todo-main{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    .todo-checkbox {
+      transform: scale(1.5);
+      margin: 0.5em;
+    }
+
+    .todo-create-date {
+      color: silver;
+      font-size: 0.7rem;
+      margin: 0.5em 0.5em 0 0.5em;
+    }
+  }
+  
+  .link-img-close {
+    width: 1em;
+    height: 1em;
+  }
+
+  .todo-main:hover {
+    cursor: pointer;
   }
 }
+
