--- a/src/style/todo.scss
+++ b/src/style/todo.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-weight: 600;
 
     .todo-checkbox {
       transform: scale(1.5);
@@ -18,6 +19,7 @@
       color: silver;
       font-size: 0.7rem;
       margin: 0.5em 0.5em 0 0.5em;
+      font-weight: normal;
     }
   }
   
@@ -31,3 +33,26 @@
   }
 }
 
+.todo-enter-active {
+  animation: todo 800ms ease-in reverse;
+}
+
+.todo-exit-active {
+  animation: todo 800ms ease-out;
+}
+
+@keyframes todo {
+  0% {
+    transform: translateX(0);
+  }
+
+  30% {
+    transform: translateX(15px);
+    opacity: .7;
+  }
+
+  100% {
+    transform: translateX(-300px);
+    opacity: 0;
+  }
+}
