Добавлены стили для todo

--- a/src/style/todo.scss
+++ b/src/style/todo.scss
@@ -22,6 +22,11 @@
       font-weight: normal;
     }
   }
+
+  .checked {
+    color: #F4192D;
+    text-decoration: line-through;
+  }
   
   .link-img-close {
     width: 1em;
