Добавлена страница AuthPage

--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -1,8 +1,5 @@
-@import './addTodo.scss';
-@import './todo.scss';
-@import './header.scss';
-@import './alert.scss';
-@import './main.scss';
+@import './mainPage/main.scss';
+@import './authPage/authPage.scss';
 
 p {
   margin: 0;
