--- a/client/src/style/authPage/authPage.scss
+++ b/client/src/style/authPage/authPage.scss
@@ -7,7 +7,7 @@
   width: 100%;
   min-height: 100%;
   padding: 20px;
-  margin-top: 10%;
+  margin-top: 7%;
 
   a {
     color: #92badd;
@@ -27,18 +27,8 @@
   }
 
   input[type=button], input[type=submit], input[type=reset]  {
-    background-color: #56baed;
-    border: none;
-    color: white;
-    padding: 15px 80px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: 13px;
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 40px 20px;
+    width: 30%;
+    margin: 10px 20px 40px 20px;
   }
   
   input[type=email], input[type=password] {
