--- a/client/src/style/mainPage/header.scss
+++ b/client/src/style/mainPage/header.scss
@@ -2,8 +2,13 @@
   width: 100%;
   height: 10%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   background-color: #26EB9F;
+
+  button {
+    margin: 1em;
+  }
 
   .logo {
     margin: 1em;
