--- a/client/src/style/mainPage/main.scss
+++ b/client/src/style/mainPage/main.scss
@@ -1,6 +1,7 @@
 @import './addTodo.scss';
 @import './todo.scss';
 @import './header.scss';
+@import './loader.scss';
 
 .main {
   @import './alert.scss';
